[gd_scene load_steps=4 format=3 uid="uid://b2f4yiy4bxemp"]

[ext_resource type="Texture2D" uid="uid://opd72pklwpof" path="res://assets/sprites/ui/Modern_UI_Style_1_32x32.png" id="1_6mhg4"]
[ext_resource type="Script" uid="uid://bkriey24iarcu" path="res://scenes/ui/DialogChooser.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cone5puvg7kn3" path="res://assets/fonts/PixelOperator8.ttf" id="2_i5y67"]

[node name="DialogChooser" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Choice1" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -56.0
offset_right = 165.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 1
texture = ExtResource("1_6mhg4")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="Label" type="Label" parent="Choice1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i5y67")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Choice2" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_right = 165.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
texture = ExtResource("1_6mhg4")
region_rect = Rect2(120, 502, 48, 50)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="Label" type="Label" parent="Choice2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i5y67")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
